z-index fix

--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ justify-content: space-between;
   top: 50vh;
   left: 15vw;
   mix-blend-mode: hard-light;
-  z-index: 10;
+  z-index: 3;
   animation-name: slideIn;
   animation-duration: 2s;
   animation-timing-function: ease-out;
@@ -131,7 +131,7 @@ justify-content: space-between;
   top: 50vh;
   right: 20vw;
   mix-blend-mode: hard-light;
-  z-index: 10;
+  z-index: 3;
   animation-name: slideIn;
   animation-duration: 2s;
   animation-timing-function: ease-out;
